--- a/style.scss
+++ b/style.scss
@@ -192,7 +192,7 @@ body{
 
 
             }
-            output{
+            label{
                 font-size: 1.8rem;
             }
             
