--- a/style.scss
+++ b/style.scss
@@ -55,7 +55,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 1.5rem;
+    // padding: 1.5rem;
 }
 
 .header{
